# opengltutorials

./: .gitignore  compile.sh
01_hellowindow/: hellowindow.cpp
03_textures/: CMakeLists.txt  textures.cpp  vertex.vs
04_transformations/: CMakeLists.txt  fragment.frag  transformations.cpp  vertex.vs
05_coordinates/: CMakeLists.txt  main.cpp
06_camera/: CMakeLists.txt  main.cpp  vertex.vs
11_colors/: main.cpp
12_basiclightning/: lighting.frag  main.cpp
13_materials/: CMakeLists.txt  lighting.frag  lighting.vs  main.cpp
14_diffusemaps/: lighting.frag  main.cpp
15_lightcasters/: lighting.frag  main.cpp
16_multiplelights/: CMakeLists.txt  lighting.frag  lighting.vert
21_modelloading/: CMakeLists.txt  main.cpp
common/: camera.hpp
hellotriangle/: hellotriangle.cpp
shared/: shader.hpp
textures/: textures.cpp
